[package]
name = "sunflower"
version = "0.1.0"
authors = ["Paul Barton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7"
serde = "1.0.110"
serde_bencode = "0.2.1"
serde_derive = "1.0.110"